objects/Account.object
<CustomObject>
    <fields>
        <fullName>Last_Coverage_Banker_call_report__c</fullName>
        <description>Date of which the core report was run by the Relationship Director</description>
        <inlineHelpText>Last time a Banker created a Call Report against this Organisation</inlineHelpText>
        <label>Last Coverage Banker Call Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Leadership_Call_Report__c</fullName>
        <description>Date of which the Call Report by Leadership was run</description>
        <inlineHelpText>Last time a Call Report was created by a Leadership team member against this Organisation</inlineHelpText>
        <label>Last Leadership Call Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Review_Date__c</fullName>
        <description>Wealth - Last contact with client</description>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Cluster_Function__c</fullName>
        <label>Legal Cluster/Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Segment__c</fullName>
        <label>Legal Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIFID_II_client__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Markets</inlineHelpText>
        <label>MIFID II client?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Markets_Key_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Markets Key Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MiFID_II_Restrictions__c</fullName>
        <label>MiFID II Restrictions</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MyMI_CIB_Parent_ID__c</fullName>
        <description>This is the ID that we link to the MYMI only for Relationship Groups</description>
        <externalId>true</externalId>
        <label>MyMI CIB Parent ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <label>Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OriginalSalesforceID__c</fullName>
        <label>Original Salesforce ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Country__c</fullName>
        <formula>Owner.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Banker_Team__c</fullName>
        <formula>IF( 
OR($RecordType.Name = &quot;Relationship Group&quot;, $RecordType.Name = &quot;Prospect&quot;), 
&quot;&quot;, 
TEXT(Parent.Owner.Team__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Banker__c</fullName>
        <formula>IF( 
OR($RecordType.Name = &quot;Relationship Group&quot;, $RecordType.Name = &quot;Prospect&quot;), 
&quot;&quot;, 
Parent.Owner.FirstName + &quot; &quot; + Parent.Owner.LastName 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Banker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Hub__c</fullName>
        <formula>IF( 
OR($RecordType.Name = &quot;Relationship Group&quot;, $RecordType.Name = &quot;Prospect&quot;), 
&quot;&quot;, 
Parent.Hub_F__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Hub</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <formula>IF( 
OR($RecordType.Name = &quot;Relationship Group&quot;, $RecordType.Name = &quot;Prospect&quot;), 
&quot;&quot;, 
IF(NOT(ISBLANK(Parent.Name)),Parent.Name,&quot;&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <description>Wealth - Is the relationship – High-Net, Ultra High-Net or Wealth Families</description>
        <label>Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High-Net</fullName>
                </value>
                <value>
                    <fullName>Ultra High-Net</fullName>
                </value>
                <value>
                    <fullName>Wealth Families</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_Targeted_AUM__c</fullName>
        <label>Potential Targeted AUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Bank_Name__c</fullName>
        <label>Primary Bank Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Bank__c</fullName>
        <description>On RG as opposed to similary named field on Prospect which is used in Matrix Leads trigger.</description>
        <label>Primary Bank</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABSA</fullName>
                </value>
                <value>
                    <fullName>FNB</fullName>
                </value>
                <value>
                    <fullName>Investec</fullName>
                </value>
                <value>
                    <fullName>Nedbank</fullName>
                </value>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Focus__c</fullName>
        <label>Product Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CIS (AAM)</fullName>
                </value>
                <value>
                    <fullName>CIS (ABAM)</fullName>
                </value>
                <value>
                    <fullName>CIS (AMM)</fullName>
                </value>
                <value>
                    <fullName>DIM CIS (AMM)</fullName>
                </value>
                <value>
                    <fullName>DIM Wrap (AMM)</fullName>
                </value>
                <value>
                    <fullName>ETF&apos;s (ABCAP)</fullName>
                </value>
                <value>
                    <fullName>Secured Option (AAM)</fullName>
                </value>
                <value>
                    <fullName>Segregated Mandate (AAM)</fullName>
                </value>
                <value>
                    <fullName>Segregated Mandate (ABAM)</fullName>
                </value>
                <value>
                    <fullName>Share Portfolios (ABAM PC)</fullName>
                </value>
                <value>
                    <fullName>Structured Products (AAM)</fullName>
                </value>
                <value>
                    <fullName>Structured Products (ABCAP)</fullName>
                </value>
                <value>
                    <fullName>AFM (ALI)</fullName>
                </value>
                <value>
                    <fullName>RAISS - Protected Funds</fullName>
                </value>
                <value>
                    <fullName>RAISS - Income and Growth</fullName>
                </value>
                <value>
                    <fullName>RAISS - Regular Saver</fullName>
                </value>
                <value>
                    <fullName>RAISS - Equity Factor ETF</fullName>
                </value>
                <value>
                    <fullName>RAISS - Bespoke</fullName>
                </value>
                <value>
                    <fullName>RAISS - Autocalls</fullName>
                </value>
                <value>
                    <fullName>RAISS - Multi Asset Factor Portfolio</fullName>
                </value>
                <value>
                    <fullName>RAISS - SA Factors</fullName>
                </value>
                <value>
                    <fullName>RAISS - Annual Payer Income and Growth</fullName>
                </value>
                <value>
                    <fullName>RAISS - IERC Super Factor Fund - option cost minimised</fullName>
                </value>
                <value>
                    <fullName>I – ABAM Africa Franchise</fullName>
                </value>
                <value>
                    <fullName>I – ABAM Fixed Income</fullName>
                </value>
                <value>
                    <fullName>I – ABAM Domestic Equity</fullName>
                </value>
                <value>
                    <fullName>I – ABAM Multi-Asset Balanced</fullName>
                </value>
                <value>
                    <fullName>I – ABAM Multi-Asset Absolute</fullName>
                </value>
                <value>
                    <fullName>I – ABAM Property</fullName>
                </value>
                <value>
                    <fullName>I – Cash Solutions (MMF)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>REF_NO__c</fullName>
        <label>REF NO</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_F__c</fullName>
        <description>Owner&apos;s region in SA</description>
        <formula>TEXT(Owner.Region__c)</formula>
        <inlineHelpText>South Africa only</inlineHelpText>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coastal</fullName>
                </value>
                <value>
                    <fullName>Inland</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <description>Wealth field
Registration number of customer</description>
        <inlineHelpText>Registration number of customer</inlineHelpText>
        <label>Registration Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Approach__c</fullName>
        <label>Relationship Approach</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maintain</fullName>
                </value>
                <value>
                    <fullName>Protect</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Romance</fullName>
                </value>
                <value>
                    <fullName>Stay Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Corridor__c</fullName>
        <label>Corridor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APAC (EX CHINA)</fullName>
                </value>
                <value>
                    <fullName>CHINA</fullName>
                </value>
                <value>
                    <fullName>EUROPE</fullName>
                </value>
                <value>
                    <fullName>UAE</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Status__c</fullName>
        <description>The status of the organisation</description>
        <inlineHelpText>Select the organisation status</inlineHelpText>
        <label>Relationship Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Global Parent</fullName>
                </value>
                <value>
                    <fullName>Lead Client</fullName>
                </value>
                <value>
                    <fullName>Lead Prospect</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>SPV</fullName>
                </value>
                <value>
                    <fullName>Matrix Database</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Research_Agreement_Type__c</fullName>
        <label>Research Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASA</fullName>
                </value>
                <value>
                    <fullName>CSA</fullName>
                </value>
                <value>
                    <fullName>RPA - Full</fullName>
                </value>
                <value>
                    <fullName>RPA - Trial</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>RPA – Full</fullName>
                    <isActive>false</isActive>
                    <label>RPA – Full</label>
                </value>
                <value>
                    <fullName>RPA – Trial</fullName>
                    <isActive>false</isActive>
                    <label>RPA – Trial</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Research_Client__c</fullName>
        <label>Research Client?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Research_Entitlement__c</fullName>
        <label>Research Entitlement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equities All</fullName>
                </value>
                <value>
                    <fullName>Equities: Client sector only</fullName>
                </value>
                <value>
                    <fullName>FICC All</fullName>
                </value>
                <value>
                    <fullName>Finra All</fullName>
                </value>
                <value>
                    <fullName>Finra: Morning Sheet only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Research_Subscription__c</fullName>
        <label>Research Subscription</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equities All</fullName>
                </value>
                <value>
                    <fullName>Equities: Client sector only</fullName>
                </value>
                <value>
                    <fullName>FICC All</fullName>
                </value>
                <value>
                    <fullName>Finra All</fullName>
                </value>
                <value>
                    <fullName>Finra: Morning Sheet only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDS_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag which mirrors that in the SDS system to indicate if a SDS client is logically deleted or not. All SA SDS clients are imported into SF.  SDS does not delete their inactive entities but flags it as deleted, we do the same.</description>
        <inlineHelpText>Flag which mirrors that in the SDS system to indicate if a SDS client is logically deleted or not.</inlineHelpText>
        <label>SDS Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDS__c</fullName>
        <description>The SDS ID number of the Organisation</description>
        <externalId>true</externalId>
        <label>SDS ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SICCODE_Description__c</fullName>
        <label>SICCODE Description</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>The Segment of the industry</description>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABSA Wealth</fullName>
                </value>
                <value>
                    <fullName>AIFA</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Asset Consultants</fullName>
                </value>
                <value>
                    <fullName>Banks</fullName>
                </value>
                <value>
                    <fullName>Business Banking</fullName>
                    <color>#66E9BD</color>
                    <label>Business Banking</label>
                </value>
                <value>
                    <fullName>Commercial Property Finance</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Financial Institution</fullName>
                    <color>#78C953</color>
                    <label>Financial Institution</label>
                </value>
                <value>
                    <fullName>Global Corporate</fullName>
                    <color>#E27001</color>
                    <label>Global Corporate</label>
                </value>
                <value>
                    <fullName>Global Development Organisation (GDO)</fullName>
                    <color>#A845DC</color>
                    <label>Global Development Organisation (GDO)</label>
                </value>
                <value>
                    <fullName>High-Net</fullName>
                </value>
                <value>
                    <fullName>IFA - Direct</fullName>
                </value>
                <value>
                    <fullName>IFA - Portfolio Manager</fullName>
                </value>
                <value>
                    <fullName>Large Local Corporate</fullName>
                    <color>#0B6FCE</color>
                    <label>Large Local Corporate</label>
                </value>
                <value>
                    <fullName>Mid-Corporate</fullName>
                    <color>#A53711</color>
                    <label>Mid-Corporate</label>
                </value>
                <value>
                    <fullName>Multi-manager</fullName>
                </value>
                <value>
                    <fullName>NBFI</fullName>
                </value>
                <value>
                    <fullName>Pension Funds</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                    <color>#F3D904</color>
                    <label>Public Sector</label>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Ultra High-Net</fullName>
                </value>
                <value>
                    <fullName>Wealth Families</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Senior_Sponsored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Senior Sponsored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_User__c</fullName>
        <label>Source User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_del__c</fullName>
        <description>Wealth - What state is the relationship currently. (Prospect, Pending, Active or Dormant)</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Furthest Status of all Opportunities</inlineHelpText>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StratO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>StratO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Structured_Entity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Structured Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Segment__c</fullName>
        <description>List of BRSG Segments</description>
        <label>Sub Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Affordable Housing</fullName>
                </value>
                <value>
                    <fullName>Banks</fullName>
                </value>
                <value>
                    <fullName>BB - Commecial</fullName>
                </value>
                <value>
                    <fullName>BB - Commercial</fullName>
                </value>
                <value>
                    <fullName>BB - Growth</fullName>
                </value>
                <value>
                    <fullName>BB - Premium</fullName>
                </value>
                <value>
                    <fullName>BB - Enterprise</fullName>
                    <label>BB - SME</label>
                </value>
                <value>
                    <fullName>FFT</fullName>
                </value>
                <value>
                    <fullName>Global Corporate</fullName>
                </value>
                <value>
                    <fullName>Global Development Organisation (GDO)</fullName>
                </value>
                <value>
                    <fullName>IFI</fullName>
                </value>
                <value>
                    <fullName>Mauritius - Domestic</fullName>
                </value>
                <value>
                    <fullName>Mauritius - International Banking</fullName>
                </value>
                <value>
                    <fullName>Mid-Corp Cape</fullName>
                </value>
                <value>
                    <fullName>Mid-Corp KZN</fullName>
                </value>
                <value>
                    <fullName>Mid-Corporate</fullName>
                </value>
                <value>
                    <fullName>Mid-Corp PTA</fullName>
                </value>
                <value>
                    <fullName>Mid-Corp Sandton</fullName>
                </value>
                <value>
                    <fullName>NBFI – Asset Manager</fullName>
                </value>
                <value>
                    <fullName>NBFI – Funds</fullName>
                </value>
                <value>
                    <fullName>NBFI – Insurance</fullName>
                </value>
                <value>
                    <fullName>NBFI – Private Equity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Public Sector CIB</fullName>
                </value>
                <value>
                    <fullName>Public Sector RBB</fullName>
                </value>
                <value>
                    <fullName>Real Estate Investment Banking</fullName>
                </value>
                <value>
                    <fullName>Regional Player</fullName>
                </value>
                <value>
                    <fullName>RoA</fullName>
                </value>
                <value>
                    <fullName>SA Coverage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Swift_Code__c</fullName>
        <externalId>true</externalId>
        <label>Swift Code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Team_F__c</fullName>
        <description>Owner&apos;s team</description>
        <formula>TEXT ( Owner.Team__c)</formula>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_with_Primary_Bank__c</fullName>
        <label>Time with Primary Bank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tot_Annualise_Income_Won__c</fullName>
        <label>Total Annualise Income Won</label>
        <summarizedField>Opportunity.Annualised_Income__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tot_Income_this_Year_Won__c</fullName>
        <label>Total Income this Year (Won)</label>
        <summarizedField>Opportunity.Income_this_Year__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tot_Weighted_Annualised_Value_Pipeline__c</fullName>
        <label>Total Weighted Annual&apos;d Value (Pipeline)</label>
        <summarizedField>Opportunity.Weighted_Annualised_Income__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tot_Weighted_Income_this_Year__c</fullName>
        <label>Total Weighted Income this Year</label>
        <summarizedField>Opportunity.Weighted_Income_this_Year__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trade_Division__c</fullName>
        <description>Name of the trade division</description>
        <label>Trade Division</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Region__c</fullName>
        <label>Trade Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gauteng North</fullName>
                </value>
                <value>
                    <fullName>Gauteng North - Limpopo</fullName>
                </value>
                <value>
                    <fullName>Gauteng North - Mpumalanga</fullName>
                </value>
                <value>
                    <fullName>Gauteng South</fullName>
                </value>
                <value>
                    <fullName>Gauteng South - Free State</fullName>
                </value>
                <value>
                    <fullName>Gauteng South - North West</fullName>
                </value>
                <value>
                    <fullName>KZN - IB</fullName>
                </value>
                <value>
                    <fullName>KZN - Trade</fullName>
                </value>
                <value>
                    <fullName>Western Cape - IB</fullName>
                </value>
                <value>
                    <fullName>Western Cape - Trade</fullName>
                </value>
                <value>
                    <fullName>Eastern Cape - IB</fullName>
                </value>
                <value>
                    <fullName>Eastern Cape - Trade</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transactional_Banking_Region__c</fullName>
        <label>Transactional Banking Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Eastern Cape</fullName>
                </value>
                <value>
                    <fullName>Gauteng Central</fullName>
                </value>
                <value>
                    <fullName>Gauteng East</fullName>
                </value>
                <value>
                    <fullName>Gauteng North</fullName>
                </value>
                <value>
                    <fullName>Gauteng South</fullName>
                </value>
                <value>
                    <fullName>Gauteng West</fullName>
                </value>
                <value>
                    <fullName>Kwazulu Natal</fullName>
                </value>
                <value>
                    <fullName>Limpopo</fullName>
                </value>
                <value>
                    <fullName>Mpumalanga</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>Southern Cape</fullName>
                </value>
                <value>
                    <fullName>Western Cape</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trust_pension_provident_other_fund_numbe__c</fullName>
        <label>Trust/pension/provident/other fund numbe</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Turn_Over_Proxy__c</fullName>
        <label>Turn Over Proxy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UK_Barclays_Org_ID__c</fullName>
        <label>UK Barclays Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent_Banker_Team__c</fullName>
        <formula>IF( 
OR($RecordType.Name = &quot;Relationship Group&quot;, $RecordType.Name = &quot;Prospect&quot;), 
TEXT(Parent.Owner.Team__c), 
TEXT(Parent.Parent.Owner.Team__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ultimate Parent Team</label>
        <type>Text</type>
    </fields>
</CustomObject>